# octo4a

./: .gitignore  LICENSE.md  README.md  buildozer.spec  local.properties
.github/: FUNDING.yml
.github/workflows/: build-app.yml  build-bootstrap.yml
app/: .gitignore  .packages  build.gradle  build.gradle.kts  gradle.properties  local.properties  pubspec.yaml  settings.gradle  settings.gradle.kts
app/.dart_tool/: package_config.json
app/android/: build.gradle
app/app/: .gitignore  build.gradle  build.gradle.kts
app/app/src/main/cpp/: CMakeLists.txt  ioctl-hook.c  real_pty.h  util.h  vsp-pty.cpp  yuv2rgb.cpp
app/lib/: main.dart  status_model.dart  utils.dart
bootstrap-builder/: build_bootstrap.sh  dpkg_replacer.go  fake_dpkg.sh  go.mod  go.sum  replace_paths.go
metadata/en-US/: title.txt
octoprint-plugin/: android_support.py
p4a-approach/: main.py
recipes/flask/: __init__.py
recipes/jinja2/: __init__.py
recipes/watchdog/: __init__.py
scripts/: comm-fix.py  setup-klipper-moonraker.sh  setup-klipper.sh  setup-octo4a.sh  setup-plugin-extras.sh
termux-based-approach/pkgrepo/: Packages  apt-ftparchive_1.4.9-24_aarch64.deb  apt-ftparchive_1.4.9-24_arm.deb  apt-transport-tor_1.4.9-12_all.deb  apt-transport-tor_1.4.9-24_all.deb  apt_1.4.9-12_aarch64.deb  apt_1.4.9-12_arm.deb  apt_1.4.9-24_aarch64.deb  apt_1.4.9-24_arm.deb  autoconf_2.69-1_all.deb  autoconf_2.69_all.deb  automake_1.16.1-1_all.deb  automake_1.16.1_all.deb  bash_5.0.11-1_aarch64.deb  bash_5.0.11-1_arm.deb  bash_5.0.11_aarch64.deb  bash_5.0.11_arm.deb  bc_1.07.1-1_arm.deb  (+540 more)
(+182 files in other folders)
